--- a/src/pages/login/Login.module.css
+++ b/src/pages/login/Login.module.css
@@ -83,7 +83,7 @@ select:focus {
   border: 1px solid #1f8a58;
   color: #333;
   font-weight: 600;
-  font-size: 1em;
+  font-size: 0.9em;
 }
 .login-form-button-login:hover {
   background: #4cc49a;
@@ -115,7 +115,7 @@ select:focus {
   border: 1px solid #1f8a58;
   color: #333;
   font-weight: 600;
-  font-size: 1em;
+  font-size: 0.9em;
 }
 .login-form-button-social:hover {
   background: #4cc49a;
@@ -131,7 +131,7 @@ select:focus {
   border: 1px solid #1f8a58;
   color: #333;
   font-weight: 600;
-  font-size: 1em;
+  font-size: 0.9em;
 }
 .login-form-button-guest:hover {
   background: #4cc49a;
